# kaggle

./: .gitignore  AGENTS.md  kaggle_cli_wrapper.py  pyproject.toml
.claude/: CLAUDE.md
competitions/japan-ai-cup/notes/: NEXT_SESSION.md  experiments.md
competitions/japan-ai-cup/scripts/: ablate_features_v2.py  baseline.py  baseline_stepwise_migration.py  eda.py  features_v2.py  train_lgbm_v2.py  tune_lgbm_v2.py
competitions/store-sales-time-series-forecasting/dbt_project/: dbt_project.yml  profiles.yml
competitions/store-sales-time-series-forecasting/dbt_project/models/marts/: test_processed.sql  train_processed.sql
competitions/store-sales-time-series-forecasting/dbt_project/models/staging/: schema.yml  stg_holidays.sql  stg_oil.sql  stg_stores.sql  stg_test.sql  stg_train.sql  stg_transactions.sql
competitions/store-sales-time-series-forecasting/dbt_project/scripts/: export_data.py
competitions/store-sales-time-series-forecasting/notebooks/: store_sales_eda.ipynb
competitions/store-sales-time-series-forecasting/scripts/: baseline_hyperparameter_tuning.py  baseline_model.py  baseline_plus_cluster.py  baseline_plus_transactions.py  baseline_with_timeseries_cv.py  train_model_improved.py
competitions/titanic/dbt_project/: dbt_project.yml  profiles.yml
competitions/titanic/dbt_project/scripts/: export_data.py  train_model.py  train_model_lgb.py
competitions/titanic/notebooks/: 01_data_exploration.py  02_visualization.py  03_preprocessing.py  04_model_training.py  05_prediction.py  titanic_eda.ipynb
(+5 files in other folders)
